fixed uk-contrast

--- a/less/uikit/base.less
+++ b/less/uikit/base.less
@@ -7,7 +7,7 @@
 // Variables
 // ========================================================================
 
-@base-body-background:                          @global-background;
+@base-body-background:                          #f5f5f5;
 @base-body-font-family:                         @global-font-family;
 @base-body-font-size:                           @global-font-size;
 @base-body-line-height:                         @global-line-height;
